v1.3.0 (2023-??-??)
 * Bugfix: Reverb and Echo should not consume any CPU when Wet Volume is 0% and
   Dry Volume is 100%

v1.2.0 (2023-05-07)
 * Respond to ALL_NOTES_OFF and ALL_SOUNDS_OFF MIDI messages
 * Get rid of obtrusive tooltips on Windows, show long name of knobs in the
   top right corner of the window instead
 * New preset: chariots.js80p
 * Bugfix: make sure that all text files in the Windows distribution use
   Windows-style line breaks
 * Bugfix: fix libcairo2 crash when the plugin's window is closed and opened
   again repeatedly in quick succession on Linux
 * Bugfix: fix crash in the FST plugin when running in Ardour (and possibly
   other hosts) which sends and effEditIdle message before sending the first
   effEditOpen

v1.1.2 (2023-05-03)
 * Bugfix: don't block the host's user interface while the file picker dialog
   is open on Linux

v1.1.1 (2023-05-02)
 * Bugfix: opening the user interface of multiple plugin instances will no
   longer cause a crash when the instances are running within the same process
 * Bugfix: filter states will no longer interfere with each other between
   multiple plugin instances when running within the same process
 * Bugfix: when Reaper is started up with a project which was saved with an
   open "FX: Track N" window, JS80P will no longer fail to display its user
   interface on Linux

v1.1.0 (2023-05-01)
 * Linux support
 * Use warm colors for knobs which have associated controllers
 * Add the "System Requirements" section to README.txt
 * Bugfix: GUI updates will no longer flicker and interfere with editing knobs
 * Bugfix: note pressure MIDI events will no longer trigger new notes

v1.0.1 (2023-04-19)
 * Improve presets/big_saw.js80p
 * 32 bit support

v1.0 (2023-04-14)
 * First release