@@ -86,14 +86,9 @@ class Delay : public Filter<InputSignalProducerClass>
         void free_delay_buffer() noexcept;
         void allocate_delay_buffer() noexcept;
 
-        void initialize_feedback(
-            Integer const round,
-            Integer const sample_count
-        ) noexcept;
-
-        void merge_inputs_into_delay_buffer(Integer const sample_count) noexcept;
-        void copy_input_into_delay_buffer(Integer const sample_count) noexcept;
+        void clear_delay_buffer(Integer const sample_count) noexcept;
         void mix_feedback_into_delay_buffer(Integer const sample_count) noexcept;
+        void mix_input_into_delay_buffer(Integer const sample_count) noexcept;
 
         void apply_gain(
             Integer const round,
@@ -103,17 +98,17 @@ class Delay : public Filter<InputSignalProducerClass>
         ) noexcept;
 
         SignalProducer const* feedback_signal_producer;
-        Sample const* const* feedback_signal_producer_buffer;
         Sample** delay_buffer;
         Sample const* gain_buffer;
         Sample const* time_buffer;
         Number feedback_value;
-        Integer feedback_sample_count;
-        Integer write_index;
+        Integer write_index_input;
+        Integer write_index_feedback;
+        Integer read_index;
+        Integer clear_index;
         Integer delay_buffer_size;
-        Number delay_buffer_size_float;
         Number delay_buffer_size_inv;
-        Number read_index;
+        bool is_starting;
 };
 
 }
